fix(Summary): fix layout issues in Summary cell

--- a/src/index.css
+++ b/src/index.css
@@ -150,10 +150,13 @@
 	border: 1px solid var(--border);
 }
 @utility header-clamp {
-	font-size: clamp(16px, 2.5vw, 20px);
+	font-size: clamp(1rem, 2.5vw, 1.25rem);
 }
 @utility body-clamp {
-	font-size: clamp(12px, 2.5vw, 14px);
+	font-size: clamp(0.75rem, 1vw, 0.875rem);
+}
+@utility subtitle-clamp {
+	font-size: clamp(0.875rem, 2.5vw, 1rem)
 }
 
 @layer components {
@@ -162,6 +165,9 @@
 	}
 	.header {
 		@apply header-clamp font-bold;
+	}
+	.subtitle {
+		@apply subtitle-clamp font-bold;
 	}
 
 	.grid-cell {
